<resources>
    <string name="app_name">ProyectoIntegradorDAM</string>
    
    //Payments
    <string name="Cliente">Cliente: %1$s, %2$s</string>

    //VIEW_MENU
    <string name="title_userName">Hola, Jane</string>
    <string name="menu_activities">Actividades</string>
    <string name="menu_payments">Cobros</string>
    <string name="menu_register">Registro</string>
    <string name="menu_expirations">Vencimientos</string>

    //VIEW_ACTIVITIES
    <string name="button_assingShift">Asignar Turno</string>
    <string name="button_newActivity">Nueva Actividad</string>
    <string name="title_listOfActivities">Listado de Actividades</string>

    //ModalForm_AssignShift

    <string name="socio">Socio:</string>
    <string name="activities">Actividades:</string>
    <string name="btn_x">x</string>

    <string name="register_title">Registro</string>
    <string name="form_email">Email</string>
    <string name="email_place_holder">jane@doe.com.ar</string>
    <string name="form_pass">Contraseña</string>
    <string name="form_repeat_pass">Repetir contraseña</string>
    <string name="password_toggle_description">Mostrar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="button_siguiente">SIGUIENTE</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="club_ndeportivo">CLUB \nDEPORTIVO</string>
    <string name="logo_club">logo club</string>
    <string name="nombre_y_apellido">Nombre y apellido</string>
    <string name="tel_fono">Teléfono</string>
    <string name="TyC">Acepto los Términos y Condificiones del Servicio y la Política de Privacidad.</string>
    //ModalForm_NewActivity

    <string name="activity">Actividad:</string>
    <string name="dayAndHour">Dia y Hora:</string>
    <string name="tbn_selectDate">Seleccionar Dia y Hora</string>
    <string name="cupos">Cupos:</string>
    <string name="tbn_registerActivity">Registrar Actividad</string>

    //Item_Activity
    <string name="cupo">Cupo:</string>

    //Modal_Confirm_delete
    <string name="title_confirm_delete">Seguro deseas eliminar esta actividad?</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="cobros">Cobros</string>
    <string name="actividades">Actividades</string>
    <string name="registro">Registro</string>
    <string name="logo">Logo</string>
    <string name="club_deportivo">Club Deportivo</string>

    // Hamburguer menu
    <string name="open">Abrir menú de navegación</string>
    <string name="close">Cerrar menú de navegación</string>
    <string name="fondo_de_la_app">Fondo de la app</string>

    //Registro de socio
    <string name="registro_socio">Registro de Socio</string>
    <string name="name">Nombre</string>
    <string name="hint_name">Ingrese nombre</string>
    <string name="last_name">Apellido</string>
    <string name="hint_last_name">Ingrese apellido</string>
    <string name="email">Email</string>
    <string name="hint_email">Ingrese email</string>
    <string name="cellphone">Celular</string>
    <string name="hint_cell">Ingrese número de celular</string>
    <string name="register_member">REGISTRAR</string>

    //Edicion Socios
    <string name="edit_member">BUSCAR</string>

    //Descripcion de iconos
    <string name="icono_volver">Icono_volver</string>
    <string name="icono_hambur">Icono_hamburguesa</string>

    // Modal registro/edicion
    <string name="register_btntxt">Registrar</string>
    <string name="edition_btntxt">Editar</string>
    <string name="maria">Maria</string>
    <string name="icono">Icono</string>
    <string name="cerrar_sesi_n">CERRAR SESION</string>

    // Vencimientos
    <string name="exp_name">Miembro</string>
    <string name="title_exp">Vencimientos</string>
    <string name="exp_date">Fecha</string>
    <string name="exp_dni">DNI</string>
    <string name="dni_12345678_juan_perez">DNI 12345678 - Juan Perez</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="_5411123456789">+5411123456789</string>
    <string name="iniciar_sesi_n">INICIAR SESION</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="cliente_sin_seleccionar">" "</string>
</resources>
