<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:textSize="20sp"
        android:fontFamily=""/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_border_shape"
        android:backgroundTint="#F5F5F5"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dayAndHour"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:fontFamily=""/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_fecha_hora"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/tbn_selectDate"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/bc_modalForm"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupos"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:fontFamily=""/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_border_shape"
        android:backgroundTint="#F5F5F5"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="8dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAddShift"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/bg_buttonRegular"
        android:text="@string/tbn_registerActivity"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>