<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general_1"
    tools:context=".RegistroSocio">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:title=""
        app:titleTextColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


<!--    <ImageButton-->
<!--        android:id = "@+id/btnBack"-->
<!--        android:layout_width="27dp"-->
<!--        android:layout_height="19dp"-->
<!--        android:layout_marginTop="64dp"-->
<!--        android:layout_marginEnd="368dp"-->
<!--        android:contentDescription="@string/icono_volver"-->
<!--        android:src="@drawable/baseline_undo_24"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/main" />-->

<!--    <ImageButton-->
<!--        android:layout_width="27dp"-->
<!--        android:layout_height="19dp"-->
<!--        android:layout_marginTop="64dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:contentDescription="@string/icono_hambur"-->
<!--        android:src="@drawable/menu_hamburguesa"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/main" />-->
    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="88dp"
        android:layout_marginStart="16dp"
        android:text="@string/registro_socio"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/comfortaa_medium"
        />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="24dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/comfortaa_medium"
         />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:hint="@string/hint_name"
        android:paddingStart="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="230dp"
        android:layout_marginStart="24dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/comfortaa_medium"
        />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:hint="@string/hint_last_name"
        android:paddingStart="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="310dp"
        android:layout_marginStart="24dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/comfortaa_medium"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:hint="@string/hint_email"
        android:paddingStart="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cellphone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="400dp"
        android:layout_marginStart="24dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/comfortaa_medium"
        />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/black"
        android:hint="@string/hint_cell"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistroSocio"
        android:layout_width="0dp"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="520dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/register_member"
         />


</androidx.constraintlayout.widget.ConstraintLayout>

