<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa_medium"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/formName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/comfortaa_medium"
        android:text="@string/nombre_y_apellido"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/registerTitle"
        app:layout_constraintTop_toBottomOf="@id/registerTitle" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/jane_doe"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center_vertical"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:paddingStart="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/formName"
        app:layout_constraintTop_toBottomOf="@id/formName"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_medium"
        android:text="@string/tel_fono"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:hint="@string/_5411123456789"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center_vertical"
        android:inputType="phone"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textPhone"
        app:layout_constraintTop_toBottomOf="@id/textPhone"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_medium"
        android:text="@string/form_email"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/comfortaa_medium"
        android:gravity="center_vertical"
        android:hint="@string/email_place_holder"
        android:inputType="textEmailAddress"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/formPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_medium"
        android:text="@string/form_pass"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/formPass"
        app:layout_constraintTop_toBottomOf="@id/formPass">
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/form_repeat_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_medium"
        android:text="@string/form_repeat_pass"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/textInputPass"
        app:layout_constraintTop_toBottomOf="@id/textInputPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/form_repeat_pass"
        app:layout_constraintTop_toBottomOf="@id/form_repeat_pass">
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/TyC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textInputRepeatPassword"
        app:layout_constraintTop_toBottomOf="@id/textInputRepeatPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/roboto_black"
        android:text="@string/button_siguiente"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:typeface="normal"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/textInputRepeatPassword"
        app:layout_constraintTop_toBottomOf="@id/textInputRepeatPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="-5dp"
        android:layout_marginTop="5dp"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="536dp"
        app:layout_constraintStart_toStartOf="@id/textInputRepeatPassword"
        app:layout_constraintTop_toBottomOf="@id/textInputRepeatPassword"/>


</androidx.constraintlayout.widget.ConstraintLayout>